fixed component spacing on landing

--- a/src/index.css
+++ b/src/index.css
@@ -393,21 +393,4 @@ h6{
   .titlewidth{
     width:100%
   }
-
-  .mobile-nav-first{
-    margin-left:1.5rem;
-  }
-
-  .m-nav-spacer{
-    margin-left: 28px;
-    margin-top: 48px;
-  }
-
-  .nav-top{
-  }
-
-  
-  .bpad64{
-  }
-
 }
