--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,8 @@
 #about {
   padding-left: 15%;
   padding-right: 18%;
-  min-height: 60vh;
-  padding-bottom: 3%;
+  min-height: 420px;
+  padding-bottom: 40px;
 }
 
 /* hide scrollbar */
@@ -35,7 +35,7 @@ h2 {
 h2 mark {
   background-color: #DAE2F5;
   color: blue;
-  border-radius: 5px;
+  border-radius: 6px;
   padding: 0px 5px;
   line-height: 1.3;
 }
@@ -51,7 +51,7 @@ p {
 p mark {
   background-color: #DAE2F5;
   color: blue;
-  border-radius: 5px;
+  border-radius: 6px;
   padding: 0 5px;
   line-height: 1.4;
 }
