--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,8 @@
 #home{
+  margin-left: 15%;
+  margin-right: 18%;
   z-index: 10;
+  /* max-width: 1000px; */
 }
 
 .home-grid {
